--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ xcode_scheme: GpxLocationManager
 before_install:
   - brew update
 script:
-  - xcodebuild -scheme Demo -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' build
-  - xcodebuild -scheme GpxLocationManager -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' build
-  - xcodebuild -scheme GpxLocationManagerTests -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' test
+  - xcodebuild -scheme Demo -quiet -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' build
+  - xcodebuild -scheme GpxLocationManager -quiet -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' build
+  - xcodebuild -scheme GpxLocationManagerTests -quiet -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' test
